...
        android:text="@string/event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleDescrip" />

    <Button
        android:id="@+id/signUpForEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/mainAppColor"
        android:text="@string/sign_up_for_event"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biggerEventImage" />
    <TextView
        android:id="@+id/alreadySigneUpTextView"
        android:layout_width="128dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_signed_up"
        android:textColor="@color/black"
        android:visibility="invisible"
...
